# idle-crusher

./: Cargo.toml  LICENSE  README.md  flake.nix
src/: main.rs  player.rs
