[package]
name = "idle-crusher"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# for Linux
# [target.x86_64-unknown-linux-gnu]
# linker = "clang"
# rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# for Windows
# [target.x86_64-pc-windows-msvc]
# linker = "rust-lld.exe"

[dependencies]
bevy = { version = "0.17", features = ["dynamic_linking"] }
avian2d = "0.4"
